cargo-features = ["profile-overrides"]

[package]
name = "region-explorer"
version = "0.1.0"
authors = ["jupart <justinwpartain1@gmail.com"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
gtk = { version = "^0", features = ["v3_12"] }
gio = "^0"
glib = "^0"
cairo-rs = { version = "^0", features = ["png"] }
ron = "0.4"
serde = "1"

# [profile.dev.overrides."*"]
# opt-level = 3
