cargo-features = ["profile-overrides"]

[package]
name = "region-explorer"
version = "0.1.0"
authors = ["jupart <justinwpartain1@gmail.com"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
gtk = "^0.3.0"
relm = "^0.11.0"
relm-derive = "^0.11.0"

# [profile.dev.overrides."*"]
# opt-level = 3
